--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-npm",
+  "name": "@fofaraz/test-npm",
   "version": "1.0.0",
   "description": "test description",
   "main": "index.js",
