--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@fofaraz/test-npm",
   "version": "1.0.2",
   "description": "test description",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
@@ -21,5 +22,6 @@
   },
   "homepage": "https://gitlab.com/muon3/muon-discord-bot#readme",
   "dependencies": {
+    "yargs": "^17.7.2"
   }
 }
